<resources>
    <string name="app_name">Art of fun</string>
    <string name="btn_radio_first">TOP memes last decade\'s</string>
    <string name="btn_radio_second">TOP memes</string>
    <string name="today">Today</string>
    <string name="naw">Naw</string>
    <string name="this_months">This months</string>
    <string name="top_meme_1">top meme #1</string>
    <string name="top_meme_2">top meme #2</string>
    <string name="top_meme_3"> top meme #3</string>
    <string name="fun">Fun</string>
    <string name="super_fun">Super fun</string>
    <string name="ultra_fun">Ultra fun</string>
    <string name="such_a_good_meme">such a good meme</string>
    <string name="drake_meme">Хіп-хоп виконавець Дрейк — видатна особистість в американській
        поп-культурі ще з часів популярного підліткового серіалу "Degrassi", де на початку 2000-х
        він грав зірку баскетболу, яку підстрелив однокласник. Пізніше його чутливий реп, в якому
        хлопець максимально відверто співає про свій внутрішній світ, надовго захопив усі топ-чарти.
        Але, як не дивно, момент його найбільшої слави — двосекундний фрагмент із кліпу на пісню
        "Hotline Bling" (близько 1,5 мільярдів переглядів на YouTube). Дрейк корчить гримасу
        неприйняття, а далі — демонструє схвалення, піднявши один палець вгору. Цей фрагмент
        перетворився на такий універсальний мем-шаблон, через який в принципі можна пояснити
        (та пожартувати) на будь-яку тему, від внутрішньої політики США до негараздів системи
        загальної освіти. І, звісно, він дуже римується з нашою типовою поведінкою в тому ж
        Facebook: щодня ми постійно оцінюємо масу різного контенту, десь ставимо обурений смайлик,
        а десь — лайк. Виходить, що Дрейк дуже точно підмітив, як виглядає волевиявлення сучасної
        людини: вона або кривиться, або схвально піднімає палець</string>
    <string name="very_good_dog_meme">Якийсь час інтернет був сповнений котів. Картинки з милими котами, 
        які радують наші очі. Зображення дивних котів та їхньої ексцентричної поведінки. Світ уже 
        кілька тисяч років не може пояснити котячу сутність (ви ж не з тих наївних людей, які вважають, 
        що нам вдалося їх приручити?). Саме тому котомеми, як правило, були саркастичними, гострими. 
        У 2013 році котяча диктатура мемів трохи похитнулась, коли всі медіа облетіло зображення 
        шиба-іну — цуцика на ім’я Кабосу, якого врятували з притулку. Саме його мила мордочка стала основою
        для серії мемів Doge, які пропонували більш витончений гумор і будувались здебільшого на абсурдному 
        сприйнятті навколишньої реальності.</string>
    <string name="this_is_fine_meme">Пес сидить і п’є каву в палаючому будинку і стверджує, що "все 
        аразд" (this is fine), аж доки не тане від смертельної спеки. Цей мем виник як частина веб-коміксу 
        "Gunshow" мультиплікатора K.C.Green — і дуже точно відображає світосприйняття останньої половини 
        2010-х. Це реакція простої людини на світ, який дедалі спотворюється й ускладнюється. 
        Погіршення геополітичного клімату, зростання ідеологічного розриву між населенням, 
        технокультура і соцмережі, які підривають фундамент демократії та гуманізму, масові 
        сплески насилля, незворотні зміни клімату. Одним словом, наша планета буквально палає 
        та розвалюється на димлячі частини,а ми споглядаємо за цим та, як той пес із мему, до 
        останнього бурмочемо мантру "все гаразд, все буде добре, все ще налагодиться".</string>
    <string name="not_sure_meme">Мем із використанням Фрая — героя популярного мультсеріалу "Футурама",
        кур’єра піцерії, який заснув у кріогенній камері та опинився у майбутньому. Фрай трохи примружив
        своє око — він у чомусь непевен. Власне, це і є основа для багаточисельних мемів, коли щось
        піддається сумнівам у гумористичному ключі. Якщо відняти від нього комедійний елемент, виходить,
        що це будь-яка людина інформаційної епохи, ери "фейків" і "діпфейків", коли можна підробити
        будь-яку новину, подію, що завгодно.Людина того часу, коли документальне підтвердження не
        заспокоює, а викликає тільки більшу підозру ("кому це вигідно?").</string>
    <string name="frog_meme">Якщо висловлюватись науково, то прийом, який використовують 
        у мемах найчастіше — це персоніфікація. Те чи інше зображення тварини супроводжується 
        коротким влучним текстом, який зображає певні особливості людського існування. Не треба бути 
        дипломованим психологом, щоб зрозуміти, що в такий спосіб людство а) компенсує свою 
        віддаленість від природи; б) краще аналізує власну поведінку, бо гарний аналіз завжди потребує 
        певної дистанції. Взагалі-то жабеня Керміт — це ветеран американського телебачення, персонаж 
        "Маппет-шоу" та "Вулиці Сезам",який з’явився на екранах у 1955 році. Тобто на ньому 
        виросло вже декілька поколінь.</string>
    <string name="boyfriend_meme">Ситуація, зрозуміла кожному: хлопець іде разом із дівчиною, але
        інша дівчина привертає його увагу — і він навіть не думає приховувати свого захоплення.
        Звісно ж, його подруга неприємно шокована такою поведінкою. Картинку помітив серед безлічі
        фотостокових знімків безіменний герой, який витягнув її назовні приблизно в 2015 році. Відтоді
        цей мем-шаблон перетворився, знову ж таки, на ідеальну ілюстрацію нашої поведінки та навіть
        психічного стану. Він — про цінності, вибір та світ безлічі варіантів, у якому так важко обирати
        щось "правильне", адже кожен вибір можна обґрунтувати. Про світ тієї ж "постправди" — одного з
        найпопулярніших слів останніх років.</string>
    <string name="baby_joda_meme">Найсвіжіший мем у нашій підбірці, який, тим не менш, абсолютно 
        заслуговує на почесне місце. Малюк Йода — персонаж оригінального телесеріалу 
        "Мандалорець" від стримінгового сервісу Disney+. Він належить до тієї же інопланетної раси, 
        що й майстер-джедай Йода, популярний персонаж оригінальної трилогії та приквелів "Зоряних воєн". 
        Малюк ніби підсумовує певний культ навколо милої, приємної та "цілющої" естетики останнього 
        десятиріччя. Якщо навколишній світ стає все менш приємним місцем для життя, ми постійно шукаємо 
        острівці спокою та вічної краси, які зараз на вагу золота.</string>
</resources>